--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@payloadcms/db-sqlite": "3.38.0",
     "@payloadcms/next": "3.38.0",
     "@payloadcms/richtext-lexical": "3.38.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.10.0",
+    "framer-motion": "^12.12.1",
     "graphql": "^16.11.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "payload": "3.38.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0"
   },
