--- a/package.json
+++ b/package.json
@@ -3,45 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "packageManager": "bun@1.2.15",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bun:dev": "bun --bun run next dev --turbopack",
+    "bun:build": "bun --bun run next build",
+    "bun:start": "bun --bun run next start",
+    "bun:lint": "bun --bun run next lint",
+    "bun:dev:safe": "bun run next dev --turbopack",
+    "bun:build:safe": "bun run next build",
+    "bun:start:safe": "bun run next start",
+    "payload:generate": "payload generate:types",
+    "payload:migrate": "payload migrate",
+    "payload:migrate:create": "payload migrate:create"
   },
   "dependencies": {
     "@libsql/darwin-arm64": "^0.5.10",
     "@payloadcms/db-sqlite": "3.38.0",
     "@payloadcms/next": "3.38.0",
     "@payloadcms/richtext-lexical": "3.38.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/postcss": "^4.1.8",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
     "graphql": "^16.11.0",
-    "lucide-react": "^0.507.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "payload": "3.38.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
     "sharp": "^0.34.1",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.8",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
     "typescript": "^5"
   }
 }
