bun deployment configured

--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
   "packageManager": "bun@1.2.15",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "bun run build:payload && bun run build:next",
+    "build:payload": "bun run payload:generate && bun run payload:migrate",
+    "build:next": "next build",
+    "build:production": "NODE_ENV=production bun run build:payload && NODE_ENV=production bun run build:next",
+    "build:comprehensive": "bun run scripts/build.js",
+    "build:prod": "NODE_ENV=production bun run scripts/build.js",
     "start": "next start",
     "lint": "next lint",
     "bun:dev": "bun --bun run next dev --turbopack",
-    "bun:build": "bun --bun run next build",
+    "bun:build": "bun run build:payload && bun --bun run next build",
+    "bun:build:production": "NODE_ENV=production bun run build:payload && NODE_ENV=production bun --bun run next build",
     "bun:start": "bun --bun run next start",
     "bun:lint": "bun --bun run next lint",
     "bun:dev:safe": "bun run next dev --turbopack",
-    "bun:build:safe": "bun run next build",
+    "bun:build:safe": "bun run build",
     "bun:start:safe": "bun run next start",
     "payload:generate": "payload generate:types",
     "payload:migrate": "payload migrate",
-    "payload:migrate:create": "payload migrate:create"
+    "payload:migrate:create": "payload migrate:create",
+    "clean": "rm -rf .next out node_modules/.cache",
+    "build:clean": "bun run clean && bun run build",
+    "deploy:build": "bun run clean && bun run build:production"
   },
   "dependencies": {
     "@libsql/darwin-arm64": "^0.5.10",
