--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,15 @@
 # nixpacks.toml configuration for Bun-based Next.js project
 
-# Extend auto-detected providers and ensure Node.js provider runs
-providers = ["...", "node"]
+# Use node provider but override with bun
+providers = ["node"]
+
+[phases.setup]
+# Ensure bun is available
+nixPkgs = ["bun"]
 
 [phases.install]
 # Use bun install to install dependencies
-cmds = ["bun install"]
+cmds = ["bun install --frozen-lockfile"]
 
 [phases.build] 
 # Use your build command that runs payload build and next build
@@ -15,10 +19,6 @@ cmds = ["bun run build"]
 # Use your start command
 cmd = "bun run start"
 
-# Optional: Add any additional Nix packages if needed
-# [phases.setup]
-# nixPkgs = ["...", "sqlite"]
-
-# Environment variables (add if needed)
-# [variables]
-# NODE_ENV = "production"
+# Environment variables
+[variables]
+NODE_ENV = "production"
