--- a/package.json
+++ b/package.json
@@ -31,18 +31,22 @@
     "deploy:build": "bun run clean && bun run build:production"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@libsql/darwin-arm64": "^0.5.10",
     "@payloadcms/db-mongodb": "^3.54.0",
     "@payloadcms/db-sqlite": "3.38.0",
     "@payloadcms/next": "3.38.0",
     "@payloadcms/richtext-lexical": "3.38.0",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/postcss": "^4.1.8",
     "better-sqlite3": "^11.10.0",
@@ -55,11 +59,13 @@
     "payload": "3.38.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.62.0",
     "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
