fix: force NODE_ENV=production in build script and add custom 404 page
- Modified build script to explicitly set NODE_ENV=production
- Created custom not-found.tsx at root level with dynamic rendering
- Fixes deployment build errors caused by NODE_ENV=development
- Resolves PayloadCMS Html import conflict during static generation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "packageManager": "bun@1.2.15",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "build:with-payload": "bun run build:payload && bun run build:next",
     "build:payload": "bun run payload:generate && bun run payload:migrate",
     "build:next": "next build",
