--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "googleapis": "^168.0.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
@@ -61,6 +62,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
     "recharts": "^2.15.4",
+    "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
