--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bun:dev:safe": "bun run next dev --turbopack",
     "bun:build:safe": "bun run build",
     "bun:start:safe": "bun run next start",
-    "payload:generate": "payload generate:types",
+    "payload:generate": "PAYLOAD_CONFIG_PATH=src/lib/payload/payload.config.ts payload generate:types",
     "payload:migrate": "payload migrate",
     "payload:migrate:create": "payload migrate:create",
     "clean": "rm -rf .next out node_modules/.cache",
