--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@shopify/storefront-api-client": "^1.0.9",
     "@tailwindcss/postcss": "^4.1.18",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
