--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "packageManager": "bun@1.2.15",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "bun --bun run next dev --turbopack",
     "build": "NODE_ENV=production next build",
     "build:with-payload": "bun run build:payload && bun run build:next",
     "build:payload": "bun run payload:generate && bun run payload:migrate",
