--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "packageManager": "bun@1.2.15",
   "scripts": {
     "dev": "bun --bun run next dev --turbopack",
-    "build": "NODE_ENV=production next build",
+    "build": "NODE_OPTIONS='--max-old-space-size=4096' NODE_ENV=production next build",
     "build:with-payload": "bun run build:payload && bun run build:next",
     "build:payload": "bun run payload:generate && bun run payload:migrate",
-    "build:next": "next build",
-    "build:production": "NODE_ENV=production bun run build:payload && NODE_ENV=production bun run build:next",
-    "build:comprehensive": "bun run scripts/build.js",
-    "build:prod": "NODE_ENV=production bun run scripts/build.js",
+    "build:next": "NODE_OPTIONS='--max-old-space-size=4096' next build",
+    "build:production": "NODE_OPTIONS='--max-old-space-size=4096' NODE_ENV=production bun run build:payload && NODE_OPTIONS='--max-old-space-size=4096' NODE_ENV=production bun run build:next",
+    "build:comprehensive": "NODE_OPTIONS='--max-old-space-size=4096' bun run scripts/build.js",
+    "build:prod": "NODE_OPTIONS='--max-old-space-size=4096' NODE_ENV=production bun run scripts/build.js",
     "start": "next start",
     "lint": "next lint",
     "bun:dev": "bun --bun run next dev --turbopack",
-    "bun:build": "bun run build:payload && bun --bun run next build",
-    "bun:build:production": "NODE_ENV=production bun run build:payload && NODE_ENV=production bun --bun run next build",
+    "bun:build": "bun run build:payload && NODE_OPTIONS='--max-old-space-size=4096' bun --bun run next build",
+    "bun:build:production": "NODE_OPTIONS='--max-old-space-size=4096' NODE_ENV=production bun run build:payload && NODE_OPTIONS='--max-old-space-size=4096' NODE_ENV=production bun --bun run next build",
     "bun:start": "bun --bun run next start",
     "bun:lint": "bun --bun run next lint",
     "bun:dev:safe": "bun run next dev --turbopack",
@@ -31,10 +31,11 @@
     "deploy:build": "bun run clean && bun run build:production"
   },
   "dependencies": {
+    "@googleapis/calendar": "^10.0.0",
     "@hookform/resolvers": "^5.2.2",
+    "google-auth-library": "^9.15.0",
     "@libsql/darwin-arm64": "^0.5.22",
     "@payloadcms/db-mongodb": "3.44.0",
-    "@payloadcms/db-sqlite": "3.44.0",
     "@payloadcms/email-nodemailer": "3.44.0",
     "@payloadcms/next": "3.44.0",
     "@payloadcms/richtext-lexical": "3.44.0",
@@ -52,14 +53,11 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@shopify/storefront-api-client": "^1.0.9",
     "@tailwindcss/postcss": "^4.1.18",
-    "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
-    "googleapis": "^168.0.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.511.0",
-    "motion": "^12.23.26",
     "next": "15.3.6",
     "payload": "3.44.0",
     "react": "^19.2.1",
